--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
